HelloUltraviolet/Fixtures/RejectedSource/Polymorphism/DuplicateClassImplementationRequirement/Expected.uv
//! Expected diagnostic metadata for the DuplicateClassImplementationRequirement rejected-source specimen.

expectedDiagnostic("E-TYP-2506", "req.14.DuplicateClassImplementationForbidden")
